src/objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Billable__c</fullName>
        <formula>Bill_By_Rate__c *  Total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_By_Rate__c</fullName>
        <label>Bill By Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Task_Assignment__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>links the time entry to a project &amp; Task</description>
        <label>Task Assignment</label>
        <referenceTo>Task_Assignment__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <formula>Task_Assignment__r.Task__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timer_Started_At__c</fullName>
        <label>Timer Started At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <label>Timesheet</label>
        <referenceTo>Timesheet__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <summarizedField>Timer_Log__c.Hours_Calculated__c</summarizedField>
        <summaryForeignKey>Timer_Log__c.Time_Entry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>